<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>greet_and_displayer</name>
  <version>1.0.0</version>
  <description>自己アイサツくん</description>
  <maintainer email="git@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>greeter</build_depend>
  <build_depend>displayer</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>greeter</exec_depend>
  <exec_depend>displayer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
