<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>greeter_ros2_style</name>
  <version>1.1.0</version>
  <description>ROSJPのROS 2講習会ようのサンプルソース：ROS2形式のメッセージ送信ノード</description>
  <maintainer email="git@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>class_loader</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>class_loader</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
