<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>greet_me</name>
  <version>1.0.0</version>
  <description>アイサツを要求する</description>
  <maintainer email="bob@example.com">ボブ</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>greeting_actions</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>greeting_actions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
