<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>greet_and_displayer_custom_msg</name>
  <version>1.1.0</version>
  <description>自己アイサツくん</description>
  <maintainer email="git@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>greeter_custom_msg</build_depend>
  <build_depend>displayer_custom_msg</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>greeter_custom_msg</exec_depend>
  <exec_depend>displayer_custom_msg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
