<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>greeting_client</name>
  <version>1.1.0</version>
  <description>アイサツくんクライアント</description>
  <maintainer email="git@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>request_greeting_service</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>request_greeting_service</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
