cmake_minimum_required(VERSION 3.5)
project(request_greeting_service)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# サービス定義からヘッダーファイル等を生成する
rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/RequestGreeting.srv"
  )

ament_export_dependencies(rosidl_default_runtime)

ament_package()
